bynkc/tests/fixtures/negative/300_http_cache_bad_max_age/src/api.bynk
context api

type View = { ok: Bool }

service api from http {
  @cache(scope: private)
  on GET("/items") by Visitor () -> Effect[HttpResult[View]] {
    Ok(View { ok: true })
  }
}
